Ongoing development. Splitting upp entities in maven projects and the database. Added repositories database configurations. Splitting up Planet (world) and MapPlanet (map). The class Planet does no longer extend from BasePlanet.